# zenn-nextjs-authjs-cognito

./: .editorconfig  .gitignore  README.md  pyproject.toml  taskfile.nextjs.yml  taskfile.yml
backend/: Dockerfile
backend/src/: lambda_handlers.py
frontend/: Dockerfile
frontend/zenn/: .env.dist  .gitignore  globals.d.ts  next.config.js  package-lock.json  package.json
frontend/zenn-app-router/: .env.dist  next-auth.d.ts  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/zenn-app-router/app/: authOptions.ts  layout.tsx  page.tsx  providers.tsx  serverProviders.tsx
frontend/zenn-app-router/app/(check-rendering)/csr/: actions.ts  page.tsx
frontend/zenn-app-router/app/(check-rendering)/isr/: page.tsx
frontend/zenn-app-router/app/(check-rendering)/ssr/: page.tsx
frontend/zenn-app-router/app/_components/: signin.tsx  userInfo.tsx
frontend/zenn-app-router/app/sign-up/: page.tsx  page.xstate.tsx  stateMachine.ts
frontend/zenn-app-router/app/sign-up/actions/: index.ts  signUpAction.ts
frontend/zenn/common/: next-auth.d.ts
frontend/zenn/components/pages/: signin.tsx  userInfo.tsx
frontend/zenn/pages/: _app.tsx  index.tsx
infrastructure/: package-lock.json  package.json
infrastructure/lib/: .gitignore  Backend.ts  Cognito.ts  Frontend.ts  FrontendWildcardDomain.ts  LambdaEdgeStack.ts  XRegionParam.ts  application-stack.ts  auth-stack.ts  constants.ts  index.ts  infrastructure-stack.ts  paramsExample.ts
infrastructure/lib/constructs/: authentication.ts  authorization.ts  backend.ts  common.ts  frontend.ts
(+8 files in other folders)
